# vcon-lib

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyinfo.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
docs/: conf.py  index.html  index.rst  modules.rst  search.js  vcon.html
docs/_autosummary/: src.vcon.civic_address.rst  src.vcon.dialog.rst  src.vcon.party.rst  src.vcon.rst  src.vcon.vcon.rst
docs/vcon/: dialog.html  party.html
samples/: example.py
src/vcon/: __init__.py  civic_address.py  dialog.py  party.py  vcon.py
tests/: test_civic_address.py  test_dialog.py  test_vcon.py
