[tool.poetry]
name = "vcon"
version = "0.3.6"
description = "The vCon library"
authors = ["Thomas McCarthy-Howe <ghostofbasho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "vcon", from = "src" }
]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^1.3.2"
pytest = "^8.3.2"
uuid6 = "^2024.7.10"
requests = "^2.32.3"
pydash = "^8.0.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
